# video-format-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  serve_app.py  setup.py  video_converter.py  video_converter_cli.py
video_converter/: __init__.py  __main__.py  webapp.py
video_converter/core/: __init__.py  converter.py
video_converter/resources/: gui.html
